[gd_scene load_steps=5 format=2]

[ext_resource path="res://Interface/LifeCandles/life_candle1.png" type="Texture" id=1]
[ext_resource path="res://Interface/LifeCandles/life_candle2.png" type="Texture" id=2]
[ext_resource path="res://Interface/LifeCandles/LivesCounter.gd" type="Script" id=3]

[sub_resource type="Animation" id=1]
resource_name = "flicker"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("HBoxContainer/TextureRect_0:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 16.5642 ),
"update": 1,
"values": [ ExtResource( 1 ), ExtResource( 2 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("HBoxContainer/TextureRect_1:texture")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ ExtResource( 1 ), ExtResource( 2 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("HBoxContainer/TextureRect_2:texture")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ ExtResource( 1 ), ExtResource( 2 ) ]
}

[node name="LivesCounter" type="Control" groups=[
"lives_counter",
]]
margin_left = 10.0
margin_top = 10.0
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_right = 40.0
margin_bottom = 40.0
rect_scale = Vector2( 2, 2 )
custom_constants/separation = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect_0" type="TextureRect" parent="HBoxContainer"]
visible = false
margin_right = 6.0
margin_bottom = 40.0
texture = ExtResource( 1 )

[node name="TextureRect_1" type="TextureRect" parent="HBoxContainer"]
visible = false
margin_right = 6.0
margin_bottom = 40.0
texture = ExtResource( 1 )

[node name="TextureRect_2" type="TextureRect" parent="HBoxContainer"]
visible = false
margin_right = 6.0
margin_bottom = 40.0
texture = ExtResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/flicker = SubResource( 1 )
